correccion exto header

--- a/portafolio.html
+++ b/portafolio.html
@@ -25,8 +25,8 @@
         <div class="container">
             <div class="header-content">
                 <h1 class="header-title" data-i18n="portfolio.name">NITE</h1>
-                <h6 class="header-mono" data-i18n="portfolio.subtitle">Front-End Developer | Game Developer | Graphic
-                    Designer</h6>
+                <h6 class="header-mono" data-i18n="header.subtitle">Front-End Developer/Designer | Game Developer |
+                    UX/UI Designer</h6>
             </div>
         </div>
     </header>
