--- a/resume.html
+++ b/resume.html
@@ -25,7 +25,8 @@
         <div class="container">
             <div class="header-content">
                 <h1 class="header-title" data-i18n="resume.name">Mateo Bonilla</h1>
-                <h6 class="header-mono" data-i18n="resume.subtitle">Front-End Developer/Designer | Game Developer | Graphic
+                <h6 class="header-mono" data-i18n="resume.subtitle">Front-End Developer/Designer | Game Developer |
+                    Graphic
                     Designer</h6>
             </div>
         </div>
@@ -155,7 +156,7 @@
                             <div class="progress mb-3">
                                 <div class="progress-bar bg-danger" style="width: 85%"></div>
                             </div>
-                            <h6>PHP</h6>
+                            <h6>TypeScript</h6>
                             <div class="progress mb-3">
                                 <div class="progress-bar bg-danger" style="width: 80%"></div>
                             </div>
@@ -168,6 +169,10 @@
                                 <div class="progress-bar bg-danger" style="width: 90%"></div>
                             </div>
                             <h6>Adobe Design</h6>
+                            <div class="progress mb-3">
+                                <div class="progress-bar bg-danger" style="width: 90%"></div>
+                            </div>
+                            <h6>Figma</h6>
                             <div class="progress mb-3">
                                 <div class="progress-bar bg-danger" style="width: 90%"></div>
                             </div>
