--- a/services.html
+++ b/services.html
@@ -27,8 +27,8 @@
         <div class="container">
             <div class="header-content">
                 <h1 class="header-title" data-i18n="services.name">Mateo Bonilla</h1>
-                <h6 class="header-mono" data-i18n="services.subtitle">Front-End Developer | Game Developer | Graphic
-                    Designer</h6>
+                <h6 class="header-mono" data-i18n="header.subtitle">Front-End Developer/Designer | Game Developer |
+                    UX/UI Designer</h6>
             </div>
         </div>
     </header>
